--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,8 @@ jobs:
     - name: Hello world action step
       id: hello
 #      uses: actions/hello-world-docker-action@v1
+      uses: actions/checkout@v2
+
       uses: ARMmbed/github-to-jira-test/.github/actions/action@master
       with:
         who-to-greet: 'Mona the Octocat'
