--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -11,6 +11,6 @@ inputs:
 #    description: 'The time we greeted you'
 runs:
   using: 'docker'
-  image: 'Dockerfile'
+  image: './Dockerfile'
   args:
     - ${{ inputs.who-to-greet }}
