--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,14 +5,28 @@ on:
 jobs:
   hello_world_job:
     runs-on: ubuntu-latest
-    name: A job to say hello
+    name: Set up new issue projects and labels
+    strategy:
+      matrix:
+        python-version: [3.6, 3.7, 3.8]
+
+    env:
+      SUPER_SECRET: ${{ secrets.SuperSecret }}
+
     steps:
     - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
       with:
-        fetch-depth: 0
-    - uses: ARMmbed/github-to-jira-test/.github/actions@master
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        python -m pip install pygithub
+    - name: Run python script
+    - uses: ARMmbed/github-to-jira-test@master
       with:
-        who-to-greet: 'Mona the Octocat'
-    # Use the output from the `hello` step
-#    - name: Get the output time
-#      run: echo "The time was ${{ steps.hello.outputs.time }}"
+        issue_num: ${{github.event.issue.number}}
+        repo_name: ${{ github.event.repository.name }}
+      run: |  
+        python triaging.py -i issue_num -r repo_name -t SUPER_SECRET
+
