--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,28 +3,18 @@ on:
     types: [ opened, reopened ]
 
 jobs:
-  hello_world_job:
+  build:
     runs-on: ubuntu-latest
-    name: Set up new issue projects and labels
-    strategy:
-      matrix:
-        python-version: [3.6, 3.7, 3.8]
+    
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
+    - uses: ARMmbed/github-to-jira-test@master
+    - name: Set up Python 
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.8
     - name: Install dependencies
       run: |
         python -m pip install pygithub
-    - name: Run python script
-    - uses: ARMmbed/github-to-jira-test@master
-      with:
-        issue_num: ${{github.event.issue.number}}
-        repo_name: ${{ github.event.repository.name }}
-        SUPER_SECRET: ${{ secrets.SuperSecret }}
-
-      run: |  
-        python triaging.py -i issue_num -r repo_name -t SUPER_SECRET
+        python triaging.py -i ${{github.event.issue.number}} -r ${{ github.event.repository.name }} -t ${{ secrets.SuperSecret }}
 
