--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2
-    - uses: ARMmbed/github-to-jira-test@master
+#    - uses: ARMmbed/github-to-jira-test@master
     - name: Set up Python 
       uses: actions/setup-python@v2
       with:
