--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,5 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install pygithub
-        python triaging.py -i ${{github.event.issue.number}} -r ${{ github.event.repository.name }} -t ${{ secrets.SuperSecret }}
+        python triaging.py -i ${{github.event.issue.number}} -r ${{ github.event.repository.name }} -t ${{ secrets.TestSecret }}
 
