--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+    - with: # Set the secret as an input
+        super_secret: ${{ secrets.TestSecret }}
+
     - uses: actions/checkout@v2
 #    - uses: ARMmbed/github-to-jira-test@master
     - name: Set up Python 
@@ -16,5 +19,5 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install pygithub
-        python triaging.py -i ${{github.event.issue.number}} -r ${{ github.event.repository.name }} -t ${{ secrets.TestSecret }}
+        python triaging.py -i ${{github.event.issue.number}} -r ${{ github.event.repository.name }} -t super_secret
 
