--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,17 +7,15 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - with: # Set the secret as an input
-        GITHUB_TOKEN: ${{ secrets.TestSecret }}
-
-    - uses: actions/checkout@v2
-#    - uses: ARMmbed/github-to-jira-test@master
-    - name: Set up Python 
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
-    - name: Install dependencies
-      run: |
-        python -m pip install pygithub
-        python triaging.py -i ${{github.event.issue.number}} -r ${{ github.event.repository.name }}
+      - name: Set up repo  
+      - uses: actions/checkout@v2
+      - name: Set up Python 
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: Install dependencies
+        run: |
+          python -m pip install pygithub
+          GITHUB_TOKEN = ${{ secrets.TestSecret }}
+          python triaging.py -i ${{github.event.issue.number}} -r ${{ github.event.repository.name }}
 
