--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,13 +7,13 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Set up repo  
-      - uses: actions/checkout@v2
-      - name: Set up Python 
+      - name: Checkout repo
+        uses: actions/checkout@v2
+      - name: Python stuff
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
-      - name: Install dependencies
+      - name: Run the script
         run: |
           python -m pip install pygithub
           GITHUB_TOKEN = ${{ secrets.TestSecret }}
