Update to run triaging script from mbed-os-ci-scripts

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,24 +9,21 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
+
       - name: Python stuff
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
-      - name: Run the script
-        run: |
-          python -m pip install pygithub
-#          python triaging.py -i ${{github.event.issue.number}} -r ${{ github.event.repository.name }} -t ${{ secrets.ISSUE_TRIAGING_PERMS }}
-      - name: Checkout another repo
+
+      - name: Checkout mbed-os-scripts repo
         uses: actions/checkout@v2
         with:
           repository: ARMmbed/mbed-os-ci-scripts
           token: ${{ secrets.ISSUE_TRIAGING_PERMS }}
-          path: mbed-os-ci-scripts
-      - name: Show file system
-        run: |
-          ls -alR
+          path: scripts
+          ref: triage_test
 
-      - name: Run script from the other repo
+      - name: Run the script
         run: |
-          python ./mbed-os-ci-scripts/metrics/__init__.py --help
+          python -m pip install pygithub
+          python ./scripts/issue_triaging/__init__.py -i ${{github.event.issue.number}} -r ${{ github.event.repository.name }} -t ${{ secrets.ISSUE_TRIAGING_PERMS }}
