--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,15 +15,7 @@ jobs:
         with:
           python-version: 3.8
 
-      - name: Checkout mbed-os-scripts repo
-        uses: actions/checkout@v2
-        with:
-          repository: ARMmbed/mbed-os-ci-scripts
-          token: ${{ secrets.ISSUE_TRIAGING_PERMS }}
-          path: scripts
-          ref: triage_test
-
       - name: Run the script
         run: |
           python -m pip install pygithub
-          python ./scripts/issue_triaging/__init__.py -i ${{github.event.issue.number}} -r ${{ github.event.repository.name }} -t ${{ secrets.ISSUE_TRIAGING_PERMS }}
+          python ./triaging.py -t ${{ secrets.ISSUE_TRIAGING_PERMS }}
