--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,5 @@ jobs:
       - name: Run the script
         run: |
           python -m pip install pygithub
+          python -m pip install mailer
           python ./triaging.py -t ${{ secrets.ISSUE_TRIAGING_PERMS }}
